<resources>
    <string name="app_name">CoroutinesFun</string>

    <string name="start_screen_button_flows">Flows</string>
    <string name="start_screen_button_testable">Testable</string>
    <string name="start_screen_button_downloads">Downloads</string>
    <string name="start_screen_button_persistence">Room Persistence</string>
    <string name="start_screen_button_stand_alones">Stand-alone samples</string>
    <string name="start_screen_button_coroutine_worker">coroutine worker samples</string>

    <string name="standalones_type_command_hint">type command here...</string>
    <string name="standalones_known_commands">Try one of the below commands:\n%s</string>

    <string name="downloads_button_cat_picture">Cat picture</string>
    <string name="downloads_button_file_not_found">File not found</string>
    <string name="downloads_checkbox_gray">Gray</string>

    <string name="flows_title_user_name">User name</string>
    <string name="flows_user_email">User e-mail address</string>
    <string name="flows_button_cycle_user_data">cycle user data</string>
    <string name="flows_user_physical_address">User address</string>
    <string name="flows_button_send_event">send event</string>
    <string name="flows_button_set_state">Set state</string>
    <string name="flows_button_resubscribe">resubscribe</string>
    <string name="flows_button_send_single_event">send single sharedFlow event</string>
    <string name="flows_button_send_alternative_single_event">send alternative single event</string>
    <string name="flows_emitter_explanation">click emit to generate SharedFlow items to be processed in parallel, each takes 1 second to process.</string>
    <string name="flows_button_emit">emit</string>

    <string name="persistence_input_hint_description">animal description</string>
    <string name="persistence_input_hint_name">animal name</string>
    <string name="persistence_button_save_animal">Save animal</string>
    <string name="persistence_button_load_next_animal">Show next animal</string>
    <string name="persistence_label_create_new_animal">Create new animal</string>
    <string name="persistence_error_required_field">Required field</string>

    <string name="work_header">Prime number candidates</string>
    <string name="work_note">
        Note: a probabilistic method is used and computation is deferred till
        device is idle. Please leave the candidates and come back later
        for results.
    </string>
    <string name="work_button_check_candidate">Check</string>
    <string name="work_prime_status_unknown">\?</string>
    <string name="work_prime_status_prime">PRIME</string>
    <string name="work_prime_status_composite">COMPOSITE</string>
    <string name="work_error_input_parsing_failed">Unhandled input</string>
    <string name="work_hint_candidate_input">type new candidate</string>

</resources>